index.css and index.js added to the local repo

--- a/BookMyHotel/index.html
+++ b/BookMyHotel/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    
+    <h1>First document</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam rem cupiditate beatae provident unde voluptate minus amet. Laboriosam illo eos error illum aliquam! Facere porro veniam vitae nesciunt labore beatae quae rerum nulla officiis nam.</p>
 </body>
 </html>
