--- a/BookMyHotel/index.html
+++ b/BookMyHotel/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>First document</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam rem cupiditate beatae provident unde voluptate minus amet. Laboriosam illo eos error illum aliquam! Facere porro veniam vitae nesciunt labore beatae quae rerum nulla officiis nam.</p>
+    
 </body>
 </html>
