aside AND fav section added

--- a/BookMyHotel/index.html
+++ b/BookMyHotel/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
+    
 </head>
 <body>
-    
+    <!--Subhrajeet Nayak 10/05/2024
+        issue number SN_10
+    -->
+    <main class="main">
+        <article class="Article">SlideShow</article>
+        <aside class="aside"><div class="one">Favorites</div>
+            <div>
+                <a href="#" id="prop1" class="list-group-item list-group-item-action">Priority 1</a>
+                <a href="#" id="prop2"class="list-group-item list-group-item-action">Priority 2</a>
+                <a href="#" id="prop3" class="list-group-item list-group-item-action">Priority 3</a>
+                <a href="#" id="prop4" class="list-group-item list-group-item-action">Priority 4</a>
+                <a href="#" id="prop5" class="list-group-item list-group-item-action">Priority 5</a>
+        </div>
+        </aside>
+    </main>
+
+
+
 </body>
 </html>
