Navbar & footer section completed

--- a/BookMyHotel/index.html
+++ b/BookMyHotel/index.html
@@ -43,6 +43,13 @@
             </div>
         </nav>
     </header>
+
+    <footer class="footer mt-auto py-3 bg-light">
+        <div class="container text-center">
+            <span class="foot" style="color:black;"> © 2024, BookMyHotel.com, Inc. or its affiliates</span>
+        </div>
+    </footer>
+       
 </body>
 
 </html>
