--- a/BookMyHotel/index.html
+++ b/BookMyHotel/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css"
         integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -32,8 +35,15 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search here " aria-label="Search">
+                        <div class="input-group">
+                            <input class="form-control border-end-0 rounded-0" type="search" placeholder="Search here" aria-label="Search">
+                            <button class="btn btn-secondary border-start-0 rounded-0" type="button">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
                     </form>
+                    
+                    
                     <div id="button" class="navbar-nav">
                         <button id="sign-in" class="btn btn-secondary" type="button">Sign In</button>
                         &nbsp;
